# ipbs

./: .gitignore  Makefile.am  README  configure.ac  dune.module  iPBS.pc.in  index.html  ipbs.pc.in
doc/: Makefile.am
doc/doxygen/: Doxyfile  Doxyfile.in  Doxylocal  mainpage
doc/doxygen/html/: _formulas.tex  a00001.html  a00001_source.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00011_source.html  a00012.html  a00012_source.html  a00013.html  a00013_source.html  a00014.html  a00014_source.html  a00015.html  a00015_source.html  a00016.html  a00016_source.html  a00017.html  a00017_source.html  a00018.html  a00018_source.html  a00019.html  a00019_source.html  a00020.html  a00020_source.html  a00021.html  a00021_source.html  a00022.html  a00022_source.html  a00023.html  a00023_source.html  a00024.html  a00024_source.html  (+54 more)
dune/: Makefile.am
dune/iPBS/: Makefile.am  datawriter.hh  iPBS.hh
dune/ipbs/: Makefile.am  PBLocalOperator.hh  bcextension.hh  bctype.hh  boundaries.hh  boundary.cc  boundary.hh  datawriter.hh  e_field.hh  ipbs.hh  ipbs_Pk.hh  ipbsanalysis.hh  ipbsolver.hh  maxwelltensor.hh  p0layout.hh  parser.cc  sysparams.cc  sysparams.hh
dune/ipbs/test/: Makefile.am  test_surfacepot.cc
examples/: 2wall.cfg  2wall_sym.cfg  config.cfg  sphere.cfg  test3d.cfg  wall.cfg
examples/grids/: 2sphere2d.geo  box.geo  cylinder.geo  ellipse.geo  ellipse2.geo  plane.geo  rigidrod.geo  sphere.geo  sphere2d_large.geo  sphere_box.geo  test3d.geo  wall.geo  wall2.geo  wall2_sym.geo
examples/plotting/: chargecomp.plt  debye_hueckel.plt  density.py  dlvo.plt  dlvo2.plt  getData.py  gouy_chapman.plt  plane_epsilon.plt  show_results.py  sphere_absdiff_close.py  sphere_rel.py
m4/: Makefile.am  gsl.m4  iPBS.m4  ipbs.m4  ipbs_grid.m4  ipbs_gsl.m4
src/: Makefile.am  PBLocalOperator.hh  PB_operator.hh  README  RefLocalOperator.hh  TODO  boundaries.hh  boundary.cc  boundary.hh  chargecompensation.py  compare_analytic.p  config.cfg  diff.py  diff_final.py  eval_elliptic.cc  eval_elliptic.hh  extensions.hh  force.hh  gradient.hh  iPBS.cc  integrateentity.hh  ipbs.cc  ipbs.hh  ipbs_P1.hh  ipbs_P2.hh  ipbs_Pk.hh  ipbs_boundary.hh  ipbs_ref_P1.hh  ipbsolver.hh  maxwelltensor.hh  p0layout.hh  parameters.hh  parser.cc  parser.hh  paster.py  pimp_my_makefile.py  ref_P1.hh  show.py  show2.py  show_logresults.py  (+10 more)
src/backup_src/: functors.hh  ipbs_Pk_old.hh  ipbs_boundary.hh  ipbs_ref_P1.hh
src/data/: ipbs_001.cfg
src/grids/: 2hole.geo  2hole.msh  2hole_sym.geo  2hole_sym.msh  2sphere2d.geo  2sphere2d.msh  2sphere_sym.geo  circle.geo  circle.msh  cylinder.geo  donut.geo  donut.msh  donut2.geo  donut2.msh  plane.geo  plane_cylindrical.geo  sphere.geo  sphere2d.geo  sphere2d.msh  sphere2d_full.geo  sphere3d.geo  sphere_box.geo  square.geo  square.msh  untitled.geo  wall.geo  wall2.geo  wall2_sym.geo
src/python/: chargecompensation.py  diff_final.py  paster.py  show.py  show_logresults.py  vtktools.py
src/scripted_kram/: 2dmesh.geo_template  2sphere2d.geo_template  2sphere_sym.geo_template  2sphere_sym_dlvo.geo_template  2sphere_sym_large.geo_template  2sphere_sym_medium.geo_template  2sphere_sym_small.geo_template  2sphere_sym_spezial.geo_template  3dmesh.geo_template  cleanup.sh  config.cfg_template  config_dlvo.cfg_template  config_large.cfg_template  config_medium.cfg_template  config_small.cfg_template  config_spezial.cfg_template  ipbs.pbs_template  ipbs_single.pbs_template  mesh.geo  mesh.geo_template  params.sh  prepare.sh  prepare_ant.sh  prepare_ant_large.sh  prepare_ant_medium.sh  prepare_ant_small.sh  prepare_ant_small_single_missmatch.sh  prepare_ant_small_single_missmatch_zoom.sh  prepare_ant_spezial.sh  prepare_condor.sh  prepare_condor_dlvo.sh  prepare_condor_large.sh  prepare_condor_large_single_missmatch_zoom.sh  prepare_condor_medium.sh  prepare_condor_medium_single_missmatch_zoom.sh  prepare_condor_small.sh  prepare_condor_small_single_missmatch_zoom.sh  prepare_condor_spezial.sh  prepare_dh.sh  prepare_gouy.sh  (+3 more)
src/scripts/: compare_surfacepotential.plt  compare_surfacepotential_gouy.plt  debye_hueckel.p  getData.py  gouy_chapman.p  plane_analytic.plt  relative_error.gpt  sphere_absdiff_far.py  sphere_rel_neu.py
test/: test.py  test2d.cfg  test2d_sphere.cfg  test3d.cfg  test_gc.cfg
test/grids/: gc_2d.geo  sphere.geo  sphere3d.geo
